Add varchar with length limit support in create table analyzer.